--- a/styles.css
+++ b/styles.css
@@ -18,12 +18,28 @@ main ul li {
     margin-right: 20%;
 }
 
+h1 {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
 main h1 {
     font-size: 1.5em;
     margin-bottom: 30px;
 }
 
 .nav-item {
+    cursor: pointer;
+}
+
+#hide {
+    font-size: 1.3em;
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+}
+
+#hide div {
+    font-size: 0.7em;
     cursor: pointer;
 }
 
@@ -36,6 +52,9 @@ aside {
 
 aside h1 {
     font-size: 1.5em;
+}
+
+#about h1 {
     margin-top: 40px;
 }
 
@@ -53,15 +72,20 @@ aside h1 {
 }
 
 img {
-    max-height: 100%;
-    max-width: 100%;
+    width: 300px;
+    margin: 20px;
 }
 
-#contact {
-    margin-left: 20%;
-    margin-right: 20%;
+#flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #copyright {
     color: white;
+}
+
+.left-line {
+    border-left: 3px solid darkgray;
 }
